--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.cubespace</groupId>
     <artifactId>CloudChat</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
 
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -67,11 +67,13 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <finalName>${project.artifactId}</finalName>
                             <artifactSet>
                                 <includes>
                                     <include>pircbot:*</include>
                                     <include>com.j256.ormlite:*</include>
+                                    <include>javax.persistence:*</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -107,6 +109,21 @@
             <groupId>pircbot</groupId>
             <artifactId>pircbot</artifactId>
             <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-core</artifactId>
+            <version>4.47</version>
+        </dependency>
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-jdbc</artifactId>
+            <version>4.47</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
         </dependency>
     </dependencies>
 
