Forgot properties (ups)

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
                 <directory>${basedir}/src/main/resources</directory>
                 <includes>
                     <include>*.yml</include>
+                    <include>*.properties</include>
                 </includes>
             </resource>
         </resources>
