--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.cubespace</groupId>
     <artifactId>CloudChat</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
 
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -75,6 +75,7 @@
                                     <include>pircbot:*</include>
                                     <include>com.j256.ormlite:*</include>
                                     <include>javax.persistence:*</include>
+                                    <include>org.twitter4j:*</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
@@ -125,6 +126,11 @@
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-stream</artifactId>
+            <version>3.0.5</version>
         </dependency>
     </dependencies>
 
