Switched to twitter4j-core since i cant use the streamer

--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
         </dependency>
         <dependency>
             <groupId>org.twitter4j</groupId>
-            <artifactId>twitter4j-stream</artifactId>
+            <artifactId>twitter4j-core</artifactId>
             <version>3.0.5</version>
         </dependency>
     </dependencies>
