--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,8 @@
     <dependencies>
         <dependency>
             <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-parent</artifactId>
-            <version>1.6.4</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/BungeeCord.jar</systemPath>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.craftminecraft.bungee</groupId>
