--- a/pom.xml
+++ b/pom.xml
@@ -120,10 +120,13 @@
     </repositories>
 
     <dependencies>
+
         <dependency>
             <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-            <version>1.7-SNAPSHOT</version>
+            <artifactId>bungeecord-parent</artifactId>
+            <version>1.6.4</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/BungeeCord.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>net.craftminecraft.bungee</groupId>
