--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,10 @@
                                     <pattern>com.iKeirNez</pattern>
                                     <shadedPattern>net.cubespace.vendor.com.iKeirNez</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>net.cubespace.lib</pattern>
+                                    <shadedPattern>net.cubespace.vendor.net.cubespace.lib</shadedPattern>
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
@@ -119,8 +123,11 @@
             <url>http://repo.craftminecraft.net/content/groups/public/</url>
         </repository>
         <repository>
-            <id>prov-libs</id>
-            <url>http://nexus.cube-space.net/content/repositories/prov-libs/</url>
+            <id>cubespace</id>
+            <url>http://nexus.cube-space.net/content/groups/public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -129,20 +136,11 @@
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-parent</artifactId>
             <version>1.7.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/BungeeCord.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>net.craftminecraft.bungee</groupId>
-            <artifactId>bungeeyaml</artifactId>
-            <version>1.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/BungeeYAML.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.iKeirNez</groupId>
-            <artifactId>PluginMessageApiPlus</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <groupId>net.cubespace</groupId>
+            <artifactId>BungeeLib</artifactId>
+            <version>1.3.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>pircbot</groupId>
