--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CloudChat
 main : net.cubespace.CloudChat.CloudChatPlugin
-version: 3.15.1
+version: 4.0.0
 author: geNAZt
-depends: [BungeeYAML]
+depends: [Yamler]
