Moved the Library out to an external Plugin

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CloudChat
 main : net.cubespace.CloudChat.CloudChatPlugin
-version: 4.0.0
+version: 4.0.1
 author: geNAZt
-depends: [Yamler]
+depends: [BungeeLib]
