--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.cubespace</groupId>
     <artifactId>CloudChat</artifactId>
-    <version>8.0.3</version>
+    <version>8.1.0</version>
 
     <build>
         <defaultGoal>clean install</defaultGoal>
@@ -98,9 +98,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.md-5</groupId>
+            <groupId>net.md_5</groupId>
             <artifactId>bungeecord-parent</artifactId>
-            <version>1.7.2</version>
+            <version>1.7.2.1</version>
         </dependency>
         <dependency>
             <groupId>net.cubespace</groupId>
