--- a/pom.xml
+++ b/pom.xml
@@ -94,13 +94,22 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>sonatype-s</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>net.md_5</groupId>
             <artifactId>bungeecord-parent</artifactId>
-            <version>1.7.2.1</version>
+            <version>1.7.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.cubespace</groupId>
+            <artifactId>Yamler-Core</artifactId>
+            <version>2.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.cubespace</groupId>
